--- a/server/css/main.css
+++ b/server/css/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+  border: 5px solid blue;
 }
 
 body {
